# simple-sftpd

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  FEATURE_AUDIT.md  IMPLEMENTATION_SUMMARY.md  Jenkinsfile  LICENSE  Makefile  PROGRESS_REPORT.md  PROJECT_STATUS.md  README.md  REFACTORING_PLAN.md  ROADMAP.md  ROADMAP_CHECKLIST.md  docker-compose.yml  simple-sftpd.code-workspace
automation/: README.md
automation/ansible/: inventory-vmware.ini  inventory.ini  playbook-build.yml  playbook.yml  requirements.yml
automation/ansible/scripts/: build.sh  collect-packages.sh  organize-packages.sh  remote-build.sh  setup-remote.sh  vm-build  vm-test
automation/ci/: .travis.yml  Jenkinsfile
automation/docker/: docker-compose.yml
automation/docker/examples/: README.md  docker-compose.yml
automation/vagrant/: Vagrantfile
cmake/: simple-ftpd-config.cmake.in
config/: simple-ftpd.conf.example  simple-sftpd.conf.example  ssftpd.conf.example
config/advanced/: README.md  simple-sftpd.conf  simple-sftpd.json  simple-sftpd.yml
config/production/: README.md  simple-sftpd.conf  simple-sftpd.json  simple-sftpd.yml
config/simple/: README.md  simple-sftpd.conf  simple-sftpd.json  simple-sftpd.yml
deployment/: README.md
deployment/docs/: README.md  ssl-certbot-guide.md
deployment/launchd/: com.simple-sftpd.simple-sftpd.plist  com.{{PROJECT_NAME}}.{{PROJECT_NAME}}.plist
deployment/logrotate.d/: {{PROJECT_NAME}}
deployment/modules-available/: auth.conf  ssl-advanced.conf  ssl.conf
deployment/sites-available/: example.com.conf
deployment/systemd/: simple-sftpd.service  {{PROJECT_NAME}}.service
deployment/windows/: {{PROJECT_NAME}}.service
docs/: README.md
docs/api/: README.md
docs/configuration/: README.md
docs/datacenter/: README.md
docs/deployment/: docker.md
docs/development/: BUILD_GUIDE.md  README.md  SETUP.md
docs/diagrams/: README.md  data-flow.md  deployment.md  flow.md
docs/enterprise/: README.md
docs/examples/: README.md
docs/getting-started/: README.md
docs/installation/: README.md
docs/production/: README.md  configuration.md  deployment.md  operations.md  performance.md  security.md
docs/shared/deployment/: README.md
docs/shared/diagrams/: architecture.md  deployment.md  security.md
docs/user-guide/: README.md
etc/: README.md
etc/launchd/: com.simple-sftpd.simple-sftpd.plist
etc/windows/: install-service.bat
include/simple-ftpd/: ftp_connection.hpp  ftp_server.hpp  ftp_server_config.hpp  ftp_user.hpp  ftp_virtual_host.hpp  logger.hpp  platform.hpp
include/simple-sftpd/: compression.hpp  file_cache.hpp  ftp_connection.hpp  ftp_connection_manager.hpp  ftp_server.hpp  ftp_server_config.hpp  ftp_user.hpp  ftp_user_manager.hpp  ftp_virtual_host.hpp  ftp_virtual_host_manager.hpp  logger.hpp  pam_auth.hpp  performance_monitor.hpp  ssl_context.hpp
include/simple-sftpd/config/: server_config.hpp
include/simple-sftpd/core/: connection.hpp  connection_manager.hpp  server.hpp
include/simple-sftpd/security/: ip_access_control.hpp  pam_auth.hpp  rate_limiter.hpp
include/simple-sftpd/utils/: logger.hpp  vulnerability_scanner.hpp
main/: datacenter.cpp  enterprise.cpp  production.cpp
packaging/: CMakeLists.cpack  README.md
packaging/assets/: conclusion.html  readme.html  welcome.html
packaging/deb/debian/: control  rules
packaging/linux/deb/: control  postinst  postrm  prerm
packaging/linux/rpm/: postinstall.sh  postuninstall.sh  preinstall.sh  preuninstall.sh  {PROJECT_NAME}.spec
packaging/macos/dmg/: create-dmg.sh
packaging/macos/pkg/: Distribution.xml  PackageInfo.xml
packaging/macos/pkg/scripts/: postinstall
packaging/windows/: installer.nsi
packaging/windows/msi/: installer.wxs
packaging/windows/nsis/: installer.nsi
project/: FEATURE_AUDIT.md  IMPLEMENTATION_SUMMARY.md  PROGRESS_REPORT.md  PROJECT_STATUS.md  README.md  ROADMAP_CHECKLIST.md  TECHNICAL_DEBT.md
scripts/: build-linux.sh  build-macos.sh  build-windows.bat  deploy-docker.sh
src/: main.cpp
src/core/: ftp_connection.cpp  ftp_connection_manager.cpp  ftp_rate_limiter.cpp  ftp_server.cpp  ftp_user.cpp  ftp_user_manager.cpp  ftp_virtual_host.cpp  ftp_virtual_host_manager.cpp
src/simple-sftpd/config/: server_config.cpp
src/simple-sftpd/core/: connection.cpp  connection_manager.cpp  server.cpp
src/simple-sftpd/security/: ip_access_control.cpp  pam_auth.cpp  rate_limiter.cpp  ssl_context.cpp
src/simple-sftpd/user/: user.cpp  user_manager.cpp
src/simple-sftpd/utils/: compression.cpp  file_cache.cpp  logger.cpp  performance_monitor.cpp  vulnerability_scanner.cpp
src/simple-sftpd/virtual_host/: virtual_host.cpp  virtual_host_manager.cpp
src/tests/: CMakeLists.txt  test_config.h.in
src/tests/data/: README.md
src/tests/unit/: test_ftp_user.cpp  test_main.cpp
src/tests/utils/: test_helpers.cpp  test_helpers.hpp
src/utils/: compression.cpp  file_cache.cpp  ftp_server_config.cpp  ip_access_control.cpp  logger.cpp  pam_auth.cpp  performance_monitor.cpp  ssl_context.cpp  vulnerability_scanner.cpp
tests/: CMakeLists.txt  main.cpp
tests/integration/: test_ftp_connection.cpp  test_ftp_server.cpp
tests/unit/: test_ftp_connection_manager.cpp  test_ftp_rate_limiter.cpp  test_ftp_server_config.cpp  test_ftp_user.cpp  test_ftp_user_manager.cpp  test_logger.cpp
tools/: change-license.sh  install-service.sh  manage-users.sh  rename-project.sh  setup-ssl.sh  validate-cmake.sh
